package behavioral.iterator.ce1_mang;

public interface MyIterator {
    Object first();
    Object next();
    Object currtent();
    boolean isDone();
}
